:construction: Create the swagger schema for all models
